1. create session 2. important: += is different from list.append in session 3. add empty to index.html

--- a/Meow_web/todos/templates/todos/index.html
+++ b/Meow_web/todos/templates/todos/index.html
@@ -7,6 +7,10 @@ Todos
 	<ul>
 		{% for todo in todos %}
 			<li><h1>{{todo}}</h1></li>
+
+		{% empty %}
+			<li>No tasks.</li>
+
 		{% endfor %}
 	</ul>
 	<a href="{% url 'todos:add' %}">Add Todos</a>
